# notwork-daw

./: .gitignore  CMakeLists.txt  Info.plist.in  LICENSE  PLAN.md  PROGRESS.md  README.md
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h
src/engine/: AudioClip.cpp  AudioClip.h  AudioEngine.cpp  AudioEngine.h  DeviceList.cpp  DeviceList.h  PlaybackScene.h  PortAudioSession.cpp  PortAudioSession.h  Recorder.cpp  Recorder.h  RingBuffer.h
src/gui/: ClipItem.cpp  ClipItem.h  Style.cpp  Style.h  TimelineScene.cpp  TimelineScene.h  TimelineView.cpp  TimelineView.h  TrackHeader.cpp  TrackHeader.h  TrackHeaderList.cpp  TrackHeaderList.h  TransportBar.cpp  TransportBar.h
src/model/: AudioEvent.h  Project.cpp  Project.h  ProjectIO.cpp  ProjectIO.h  Track.h
